# QDTS

./: LICENSE  README.md  compile.sh
client_lib/: functional_test.py  interfaces_pb2.py  interfaces_pb2_grpc.py
functional_test/: README.md  config.yaml  functional_test.py  inventory.yaml
protobufs/: interfaces.proto
qdts_client/: pyproject.toml
qdts_client/src/qdts_client/: interfaces_pb2.py  interfaces_pb2_grpc.py  qdts_etsi_004_client.py
qdts_node/: pyproject.toml
qdts_node/src/qdts_node/: backend.py  configuration.py  database.py  key_management.py  key_synchronization.py  main.py
qdts_node/src/qdts_node/grpc_serialization/: interfaces_pb2_grpc.py
qdts_orchestrator/: pyproject.toml
qdts_orchestrator/config_examples/: config.yaml  inventory.yaml
qdts_orchestrator/src/qdts_orchestrator/: install.py  run.py  stop.py
